# bevy_sketches

./: README.md  index.html  index.js  package.json  pnpm-lock.yaml  rsw.toml  vite.config.js
assets/: index-0febfa0c.js  index-3036d482.js  index-37ea95a7.js  index-50289e0a.js  index-50af35d8.js  index-50cdb3ce.js  index-5d1a4a54.js  index-71b61960.js  index-745f0421.js  index-9eff608d.js  index-a2a3936f.js  index-a599c06f.js  index-dd1ee9e9.js  index.8577bae1.js  index.9e3784e7.js  sketch_1-720fbbf8.js  sketch_1-7664c8c4.js  sketch_1-82029830.js  sketch_1-856bbfd7.js  sketch_1-8c8b25e2.js  sketch_1-b9265481.js  sketch_1-c0769857.js  sketch_1-d9622503.js  sketch_1-da5f25ac.js  sketch_1-dc04a866.js  sketch_1-df3a879e.js  sketch_1-f28b7035.js  sketch_1.68b8f585.js  sketch_2-06479338.js  sketch_2-136b619d.js  sketch_2-224d5a57.js  sketch_2-2ed10484.js  sketch_2-320ed62c.js  sketch_2-5d70e30c.js  sketch_2-b10f8246.js  sketch_2-c799a099.js  sketch_2-d5664855.js  sketch_2-ec08b087.js  sketch_2.997d0aa5.js  sketch_3-0b357d92.js  (+1 more)
assets/sketch_1/: manifest.assets.ron
assets/sketch_2/: manifest.assets.ron
crates/sketch_1/: Cargo.toml
crates/sketch_1/assets/: manifest.assets.ron
crates/sketch_1/src/: camera_plugin.rs  config_plugin.rs  lib.rs  loading_plugin.rs  main.rs  plane_plugin.rs
crates/sketch_2/: Cargo.toml
crates/sketch_3/: Cargo.toml
crates/sketch_3/src/: lib.rs  (+2 more)
crates/template/: Cargo.toml
sketch_1/: manifest.assets.ron
sketch_1/shaders/: simplex_noise_2d.wgsl  vertex_noise_shader.wgsl
sketch_2/: manifest.assets.ron
template/: manifest.assets.ron
(+9 files in other folders)
