[package]
name = "sketch_1"
version = "0.1.0"
publish = false
authors = ["Cooper Reiff <dev@cooperreiff.com>"]
edition = "2021"
exclude = ["dist", "platform", "assets"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.10", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_render",
  "bevy_sprite",
  "png",
  "x11",
] }
bevy_kira_audio = "0.15"
bevy_asset_loader = { version = "0.16", features = ["standard_dynamic_assets"] }
rand = "0.8"
bevy-inspector-egui = "0.18"
bevy-debug-text-overlay = "5.1"
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }
async-std = "1.12.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.7"

[build-dependencies]
embed-resource = "1.4"
